[gd_scene load_steps=15 format=3 uid="uid://dbxq20lxewlf1"]

[ext_resource type="Theme" uid="uid://bv2a6wh6lyl20" path="res://default_theme.tres" id="1_ou4xd"]
[ext_resource type="Script" path="res://scenes/GameScene/GameUI.gd" id="1_xquw8"]
[ext_resource type="PackedScene" uid="uid://bedjg8boij6ji" path="res://scenes/WinScreen/WinScreen.tscn" id="2_gkmdf"]
[ext_resource type="PackedScene" uid="uid://oxhkh2bwf440" path="res://scenes/LoseScreen/LoseScreen.tscn" id="3_edtoc"]
[ext_resource type="Script" path="res://addons/maaacks_game_template/extras/scripts/PauseMenuController.gd" id="4_yqusg"]
[ext_resource type="PackedScene" uid="uid://cd86c2axyabh3" path="res://scenes/Menus/PauseMenu/PauseMenu.tscn" id="5_86gef"]
[ext_resource type="Script" path="res://addons/maaacks_game_template/extras/scripts/LevelLoader.gd" id="6_y03ga"]
[ext_resource type="PackedScene" uid="uid://bkcsjsk2ciff" path="res://addons/maaacks_game_template/base/scenes/MusicPlayers/BackgroundMusicPlayer.tscn" id="7_aibl4"]
[ext_resource type="PackedScene" uid="uid://cd0jbh4metflb" path="res://addons/maaacks_game_template/base/scenes/LoadingScreen/LoadingScreen.tscn" id="8_elxsf"]
[ext_resource type="Script" path="res://scenes/GameScene/ConfigurableSubViewport.gd" id="9_ba104"]
[ext_resource type="AudioStream" uid="uid://h78nxs1nqqdq" path="res://assets/sound/base.mp3" id="9_mpq0b"]
[ext_resource type="AudioStream" uid="uid://bg675o1nl4q50" path="res://assets/sound/sound_button.ogg" id="10_cvlwt"]
[ext_resource type="Script" path="res://scenes/GameScene/InputDisplayLabel.gd" id="10_yni8k"]
[ext_resource type="AudioStream" uid="uid://tui86stennr3" path="res://assets/sound/sound_magic.ogg" id="11_edaqk"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_ou4xd")
script = ExtResource("1_xquw8")
win_scene = ExtResource("2_gkmdf")
lose_scene = ExtResource("3_edtoc")

[node name="PauseMenuController" type="Node" parent="."]
script = ExtResource("4_yqusg")
pause_menu_packed = ExtResource("5_86gef")

[node name="LevelLoader" type="Node" parent="." node_paths=PackedStringArray("level_container")]
script = ExtResource("6_y03ga")
level_container = NodePath("../ViewportContainer/ConfigurableSubViewport")
files = Array[String](["res://scenes/GameScene/Levels/Base.tscn", "res://scenes/GameScene/Levels/Map.tscn"])
directory = "res://scenes/GameScene/Levels"

[node name="BackgroundMusicPlayer" parent="." instance=ExtResource("7_aibl4")]
unique_name_in_owner = true
stream = ExtResource("9_mpq0b")
volume_db = -15.0

[node name="ButtonSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("10_cvlwt")
bus = &"SFX"

[node name="ButtonMagicSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("11_edaqk")
bus = &"SFX"

[node name="LoadingScreen" parent="." instance=ExtResource("8_elxsf")]
visible = false

[node name="ViewportContainer" type="Control" parent="."]
custom_minimum_size = Vector2(1280, 720)
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1

[node name="ConfigurableSubViewport" type="Control" parent="ViewportContainer"]
custom_minimum_size = Vector2(1280, 720)
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1

[node name="ViewportContainer2" type="SubViewportContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="ConfigurableSubViewport2" type="SubViewport" parent="ViewportContainer2"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
audio_listener_enable_2d = true
audio_listener_enable_3d = true
physics_object_picking = true
gui_embed_subwindows = true
size = Vector2i(1280, 720)
render_target_update_mode = 0
script = ExtResource("9_ba104")

[node name="InputDisplayLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -44.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
autowrap_mode = 2
script = ExtResource("10_yni8k")

[connection signal="level_load_started" from="LevelLoader" to="." method="_on_level_loader_level_load_started"]
[connection signal="level_loaded" from="LevelLoader" to="." method="_on_level_loader_level_loaded"]
[connection signal="levels_finished" from="LevelLoader" to="." method="_on_level_loader_levels_finished"]
